changed all Stream.toList() to Stream.collect(Collectors.toList())