@@ -7,6 +7,7 @@ import datamodel.Edge;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Queries {
@@ -17,13 +18,13 @@ public class Queries {
         OResultSet resultSet = databaseSession.query("SELECT in.hash, out.hash FROM (SELECT in, out FROM E)");
         Stream<OResult> resultStream = resultSet.stream();
         Stream<Edge> edgeStream = resultStream.map(result -> new Edge(result.getProperty("in.hash"), result.getProperty("out.hash")));
-        List<Edge> edgeList = edgeStream.toList();
+        List<Edge> edgeList = edgeStream.collect(Collectors.toList());
 
         return Optional.of(
                 databaseSession.query("SELECT in.hash, out.hash FROM (SELECT in, out FROM E)")
                         .stream()
                         .map(result -> new Edge(result.getProperty("in.hash"), result.getProperty("out.hash")))
-                        .toList());
+                        .collect(Collectors.toList()));
     }
     public static Optional<List<Integer>> getVertices(ODatabaseSession databaseSession){
         databaseSession.activateOnCurrentThread();
@@ -31,7 +32,7 @@ public class Queries {
                 (databaseSession.query("SELECT * FROM V")
                         .stream()
                         .mapToInt(result -> result.getProperty("hash"))
-                        .boxed().toList()
+                        .boxed().collect(Collectors.toList())
                 ));
     }
 }
